# Find-info-app

./: .dockerignore  .gitignore  Bokeh_test-1.ipynb  Bokeh_test-2.ipynb  Bokeh_test-3.ipynb  README.md  app.py  app_0.py  app_2.py  app_4_recetas.py  app_5_recetas_rename.py  app_fix.py  app_graf.py  compose.yaml  pyproject.toml
datasets/: Murcielagos_one_shot_classif_2.csv  Murcielagos_one_shot_classif_3.csv  Murcielagos_one_shot_classif_4.csv  one_shot_classif.csv
datasets/by_species/: Leptonycteris.csv  Melipona_beecheii.csv
find_info_app/: __init__.py  ai.py  cache.py  feedback.py  graphs.py  graphs2.py  model.py  pdf.py  prompts.py
find_info_app/ui/: display_docs.py
locale/: messages.pot
locale/es/LC_MESSAGES/: messages.po
pages/: pages.py  summary_plot.py  summary_plot2.py
papers/datasets/: .~lock.2024-06-04-zero_shot.csv#
resources/: Dockerfile
