[tool.poetry]
name = "find-info-app"
version = "0.1.0"
description = "Streamlit app to extract from articles using Gemini Pro LLM"
authors = ["Juan M Barrios <juan.barrios@conabio.gob.mx>"]
license = "GPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "^1.31.0"
langchain = "^0.1.5"
langchain-google-genai = "^0.0.7"
chromadb = "^0.4.22"
pypdf = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
