[tool.poetry]
name = "find-info-app"
version = "0.1.3"
description = "Streamlit app to extract info from articles using Gemini Pro LLM"
authors = ["Juan M Barrios <juan.barrios@conabio.gob.mx>"]
license = "GPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "^1.37.1"
langchain = "^0.2.14"
langchain-google-genai = "^1.0.9"
langchain-chroma = "^0.1.2"
pypdf = "^4.3.1"
bokeh = "3.5.1"
langchain-community = "^0.2.12"

[tool.poetry.group.elasticsearch.dependencies]
elasticsearch = "^8.12.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
